--- a/csit/4sem/database/2079.html
+++ b/csit/4sem/database/2079.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png"
+                    width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -69,7 +70,7 @@
         <div class="row justify-content-center">
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
-                <div class="col-lg-8">
+                <div class="col-8">
                     <a href="2073.html"><button type="button" class="btn ">2073</button></a>
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
@@ -119,7 +120,8 @@
                         <li> Describe type of functional dependencies with example.</li>
                         <li>Discuss the concept of generalization and specialization with example.</li>
                         <li>What is ER diagram? Construct ER diagram to show the relationship between <b>Player</b> and
-                            <b>Game</b>entities.</li>
+                            <b>Game</b>entities.
+                        </li>
                         <li>Write short notes on (any two)
                             <ol type="a">
                                 <li>Two phase locking</li>
@@ -137,9 +139,7 @@
                             Also mention importance of data integrity.
                         </li>
                         <li>Write SQL statements to contruct following tables and establish referentail integrity
-                            (foreign key)
-                            between tables. Also add one more column to the both tables (say age in Author and Publisher
-                            in Writes)
+                            (foreign key) between tables. Also add one more column to the both tables (say age in Author and Publisher in Writes)
                             <br>Author (Aid, name, gender, address) <br>
                             Writes (Aid, Book_id, Title, ISBN).
                         </li>
@@ -162,49 +162,49 @@
 
 
 
-  <!-- Footer Section -->
-  <div class="container-fluid">
-    <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 text-center">
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
-            <a href=""><i class="bi bi-github"></i></i></a>
-            <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
+    <!-- Footer Section -->
+    <div class="container-fluid">
+        <div class="row justify-content-center rounded" id="footer-section">
+            <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+            <div class="col-md-5 text-center">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+                <a href=""><i class="bi bi-github"></i></i></a>
+                <a href=""> <i class="bi bi-twitter"></i></i></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+            </div>
         </div>
-    </div>
 
-    <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-lg-3 mb-3">
-            <h4>FWUNOTES</h4>
-            <hr class="mb-4">
-            Here we provide the old question paper of different faculties of Far Western University.
-            Along this we also provide the notes of different subject.
+        <div class="row justify-content-center" id="footer-section-2">
+            <div class="col-lg-3 mb-3">
+                <h4>FWUNOTES</h4>
+                <hr class="mb-4">
+                Here we provide the old question paper of different faculties of Far Western University.
+                Along this we also provide the notes of different subject.
+            </div>
+            <div class="col-lg-2 mb-3" id="footer-useful-link">
+                <h4>USEFUL LINKS</h4>
+                <hr class="lg-4">
+                <a href="csit.html">CSIT</a> <br>
+                <a href="#">General Bsc</a> <br>
+                <a href="#">Engineering</a> <br>
+                <a href="bba.html">BBA</a> <br>
+                <a href="#">BBS</a> <br>
+            </div>
+            <div class="col-lg-3 mb-3" id="footer-contact">
+                <h4>CONTACT</h4>
+                <hr class="mb-4">
+                <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
+                <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
+                <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
+            </div>
         </div>
-        <div class="col-lg-2 mb-3" id="footer-useful-link">
-            <h4>USEFUL LINKS</h4>
-            <hr class="lg-4">
-            <a href="csit.html">CSIT</a> <br>
-            <a href="#">General Bsc</a> <br>
-            <a href="#">Engineering</a> <br>
-            <a href="bba.html">BBA</a> <br>
-            <a href="#">BBS</a> <br>
-        </div>
-        <div class="col-lg-3 mb-3" id="footer-contact">
-            <h4>CONTACT</h4>
-            <hr class="mb-4">
-            <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-            <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
-        </div>
-    </div>
 
-    <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        <div class="row text-center" id="footer-copyright-section">
+            <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        </div>
     </div>
-</div>
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
