--- a/csit/4sem/dcn/2079.html
+++ b/csit/4sem/dcn/2079.html
@@ -70,7 +70,9 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2079</button></a>
                 </div>
             </div>
 
