--- a/csit/4sem/sad/2075.html
+++ b/csit/4sem/sad/2075.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
@@ -70,22 +71,20 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
-                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2075</button></a>
+                    <a href="2079.html"><button type="button" class="btn">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2074</p>
-                <p> Introduction to Cryptography (CSIT.321)</p>
+                <p>End-Term Examination-2075</p>
+                <p> System Analysis and Design (CSIT.225)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Sixth <br>
+                        <b>Semester:</b> Fourth <br>
                     </div>
                     <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
@@ -96,50 +95,49 @@
                         The figures in the margin indicate full marks.</i></p>
                 <h5>Group B</h5>
                 <b>
-                    <p>Attempt any six questions.(6x8=48)</p>
+                    <p>Attempt any six questions.(6x8=48) (Short questions)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define cryptography.explain cipher with suitable example.</li>
-                        <li>Explain Elliptic curve cryptography in detail.</li>
-                        <li>Explain chinese remainder theorem with suitable example.</li>
-                        <li>How can you check integrity of a message? explain the properties of cryptographic hash
-                            function.</li>
-                        <li>What do you mean by web security ? differentiate between firewall and intrusion detection
-                            system.</li>
-                        <li>explain digital signature standard (DSS) algorithm. Verify it with suitable example.</li>
-                        <li>Explain CMAC process. What is the number of padding bits if the length of the original
-                            message is 2590 bits in case of SHA-512?</li>
-                        <li>Write short notes on:(any two) <br>
-                            i. HIll cipher <br>
-                            ii. shannon's thepry <br>
-                            iii. symmetric vs.Asymmetric cipher <br>
+                        <li>What is information system? explain types of information system.</li>
+                        <li>Who is system analyst? Highlight the major characteristics of a good system analyst.</li>
+                        <li>Define capability maturity model. Explain its different levels.</li>
+                        <li>Explain waterfall model with advantages and disadvantages.</li>
+                        <li>Describe creeping commitment approach for feasibility analysis. Explain different
+                            checkpoints of creeping commitment approach.</li>
+                        <li>Explain about process modeling and process decomposition.</li>
+                        <li>What short notes on: (any two) <br>
+                            a) pay-back analysis <br>
+                            b) Return on investment analysis <br>
+                            c) CASE tools
                         </li>
+
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
+                            <p class="text-center">Attempt any two questions. (2x16=32) (Long questions)</p>
                         </b>
-                        <li>Explain AES algorithm with its features and block diagram.</li>
-                        <li>What is man-in-the-middle attack? Explain Diffie-Hellman key exchange algorithm with
-                            suitable example.</li>
-                        <li>What do you mean by Fermats and euler theorem? Explain modification detection code (MDC) i
-                            details.</li>
+                        <li>What is SDLC? Explain its different stages with block diagram</li>
+                        <li>What is project management? What causes the project failure? Explain different tools and
+                            techniques of project management.</li>
+                        <li>What do you mean by fact finding technique? Explain different fact finding techniques with
+                            advantages and disadvantages.</li>
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
-                <h4>Sixth Semester</h4>
+            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+                <h4>Fourth Semester</h4>
                 <ol>
-                    <li><a href="#">Introduction to Cryptography</a></li>
-                    <li><a href="../java/2074.html">Java Progamming I</a></li>
-                    <li><a href="../research/2074.html">Research Methodology for CS</a></li>
-                    <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="../webII/2074.html">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#">System Analysis and Design</a></li>
+                    <li><a href="../nm/2079.html">Numerical Methods</a></li>
+                    <li><a href="../database/2073.html">Database Management System</a></li>
+                    <li><a href="../satII/2079.html">Applied Statistics</a></li>
+                    <li><a href="../dcn/2074.html">Data Communication and Networks</a></li>
+                    <li><a href="../toc/2079.html">Theory Of Computation</a></li>
                 </ol>
             </div>
         </div>
     </div>
+
 
 
     <!-- Footer Section -->
@@ -155,6 +153,7 @@
                 <a href=""> <i class="bi bi-instagram"></i></i></a>
             </div>
         </div>
+
         <div class="row justify-content-center" id="footer-section-2">
             <div class="col-lg-3 mb-3">
                 <h4>FWUNOTES</h4>
@@ -184,7 +183,6 @@
             <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
         </div>
     </div>
-
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
