--- a/csit/3sem/coa/2078.html
+++ b/csit/3sem/coa/2078.html
@@ -162,10 +162,10 @@
         <div class="col-lg-2 mb-3" id="footer-useful-link">
             <h4>USEFUL LINKS</h4>
             <hr class="lg-4">
-            <a href="csit.html">CSIT</a> <br>
+            <a href="../../../csit.html">CSIT</a> <br>
             <a href="#">General Bsc</a> <br>
             <a href="#">Engineering</a> <br>
-            <a href="bba.html">BBA</a> <br>
+            <a href="../../../bba.html">BBA</a> <br>
             <a href="#">BBS</a> <br>
         </div>
         <div class="col-lg-3 mb-3" id="footer-contact">
