--- a/csit/6sem/java/2074.html
+++ b/csit/6sem/java/2074.html
@@ -116,7 +116,10 @@
                         <li>Draw flowchart of if else if statements and solve the following problems. Write a program to
                             find net bill amount for electricity consumed: If consumed unit is less or equal to 80, cost
                             will be 100, if consumed unit is greater than 80 and less than 200, rate for all units above
-                            80 will be NRs.7.5.</li>
+                            80 will be NRs.7.5. 
+                            <br>
+                            If the consumed unit is greater than 300 than, rate is NRs. 12.
+                        </li>
                         <li>What is multithreading. List out its significance. Explain the life cycle of Thread with
                             state diagram and programming example.</li>
                         <li>Mention the syntax and structures of single, multilevel and multiple inheritance. Write down
