--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     function displayMessage() {
       alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thank You For Visiting Our Work.");
     }
-    displayMessage(); 
+    // displayMessage();
   </script>
 
 </head>
@@ -31,7 +31,8 @@
   <!-- Navbar -->
   <nav class="navbar  navbar-expand-lg bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand text-white" href="#"><img src="images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
+      <a class="navbar-brand text-white" href="#"><img src="images/logo.png" width="70px" alt=""
+          class="img-fluid rounded"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -127,98 +128,8 @@
     </div>
 
     <!-- Science and Technology Departments -->
-    <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
-        <h4>First Semester</h4>
-        <ol>
-          <li><a href="#">Compulsory English </a></li>
-          <li><a href="#">Information Technology Fundamentals</a></li>
-          <li><a href="#">Calculus And Analytical Geometry</a></li>
-          <li><a href="#">Electronic Physics</a></li>
-          <li><a href="#">Programming Fundamentals And C Programming</a></li>
-        </ol>
-      </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
-        <h4>Second Semester</h4>
-        <ol>
-          <li><a href="csit/2sem/la/2071.html">Linear Algebra</a></li>
-          <li><a href="csit/2sem/mc/2071.html">Mechanics And Electrodynamics</a></li>
-          <li><a href="csit/2sem/DL/2071.html">Digital Logic Design</a></li>
-          <li><a href="csit/2sem/mp/2072.html">Microprocessor System</a></li>
-          <li><a href="csit/2sem/DSA/2072.html">Data Structure And Algorithms</a></li>
-        </ol>
-      </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3  zoominout">
-        <h4>Third Semester</h4>
-        <ol>
-          <li><a href="csit/3sem/coa/2078.html">Computer Architecture</a></li>
-          <li><a href="csit/3sem/ds/2078.html">Discrete Structure</a></li>
-          <li><a href="csit/3sem/management/2078.html">Introduction To Management</a></li>
-          <li><a href="csit/3sem/c++/2078.html">Object Oriented Programming with C++</a></li>
-          <li><a href="csit/3sem/os/2078.html">Operating System</a></li>
-          <li><a href="csit/3sem/statI/2078.html">Statistics and Probability</a></li>
-        </ol>
-      </div>
-    </div>
-
-    <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow-lg  rounded mt-3  zoominout">
-        <h4>Fourth Semester</h4>
-        <ol>
-          <li><a href="csit/4sem/sad/2079.html">System Analysis and Design</a></li>
-          <li><a href="csit/4sem/nm/2079.html">Numerical Methods</a></li>
-          <li><a href="csit/4sem/database/2073.html">Database Management System</a></li>
-          <li><a href="csit/4sem/satII/2079.html">Applied Statistics</a></li>
-          <li><a href="csit/4sem/dcn/2079.html">Data Communication and Networks</a></li>
-          <li><a href="csit/4sem/toc/2079.html">Theory Of Computation</a></li>
-        </ol>
-      </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
-        <h4>Fifth Semester</h4>
-        <ol>
-          <li><a href="csit/5sem/cg/2079.html">Computer Graphics</a></li>
-          <li><a href="csit/5sem/daa/2075.html">Data Analysis and Algorithms</a></li>
-          <li><a href="csit/5sem/cd/2079.html">Compiler Design</a></li>
-          <li><a href="csit/5sem/sam/2079.html">Simulation and Modeling</a></li>
-          <li><a href="csit/5sem/ai/2079.html">Artificial Intelligence</a></li>
-          <li><a href="csit/5sem/web/2079.html">Web Technology I</a></li>
-        </ol>
-      </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
-        <h4>Sixth Semester</h4>
-        <ol>
-          <li><a href="csit/6sem/crypto/2079.html">Introduction to Cryptography</a></li>
-          <li><a href="csit/6sem/java/2074.html">Java Progamming I</a></li>
-          <li><a href="csit/6sem/research/2074.html">Research Methodology for CS</a></li>
-          <li><a href="csit/6sem/se/2074.html">Software Engineering</a></li>
-          <li><a href="csit/6sem/webII/2074.html">Web Tech II</a></li>
-          <li><a href="https://fwunotes.xyz/index.html">Minor Project I</a></li>
-        </ol>
-      </div>
-    </div>
-
-    <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
-        <h4>Seventh Semester</h4>
-        <ol>
-          <li><a href="csit/7sem/ecom/2075.html">E-commerce</a></li>
-          <li><a href="csit/7sem/adJava/2075.html">Advanced Java Programming</a></li>
-          <li><a href="csit/7sem/ooad/2075.html">Object Oriented Analysis and Design</a></li>
-          <li><a href="#">Minor Project II</a></li>
-          <li><a href="csit/7sem/dba/2074.html">Database Administration (Elective I)</a></li>
-          <li><a href="csit/7sem/dmw/2075.html">Data Mining and Warehousing (Elective II)</a></li>
-        </ol>
-      </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
-        <h4>Eight Semester</h4>
-        <ol>
-          <li><a href="csit/8sem/pc/2074.html">Parallel Computing</a></li>
-          <li><a href="#">Internship</a></li>
-          <li><a href="csit/8sem/adbd/2074.html">Advanced Database Design (Elective III)</a></li>
-          <li><a href="csit/8sem/ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
-          <li><a href="csit/8sem/ebeg/2074.html">E-Business and E-Governance (Elective V)</a></li>
-        </ol>
-      </div>
+    <div class="js-semWiseSubjects">
+      
     </div>
 
     <!-- FAQ Section -->
@@ -310,7 +221,7 @@
         <a href="https://www.facebook.com/profile.php?id=100088744694376"><i class="bi bi-facebook"></i></a>
         <a href="#"> <i class="bi bi-instagram"></i></i></a>
       </div>
-      <!-- <div class="col-md-3 text-center">
+      <div class="col-md-3 text-center">
         <img src="images/nishan.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Nishan Singh</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
@@ -330,7 +241,7 @@
         <h6>FWU Bsc. CSIT 2076</h6>
         <a href="#"><i class="bi bi-facebook"></i></a>
         <a href="#"> <i class="bi bi-instagram"></i></i></a>
-      </div> -->
+      </div>
       <div class="col-md-3 text-center">
         <img src="images/gaurav.jpg" width="160px" alt="" class="img-fluid rounded">
         <h5>Gaurav Bhatt</h5>
@@ -357,8 +268,8 @@
       <div class="col-md-3 mb-3">
         <h4>FWUNOTES</h4>
         <hr class="mb-4">
-         Here we provide the old question paper of different faculties of Far Western University.
-         Along this we also provide the notes of different subject.
+        Here we provide the old question paper of different faculties of Far Western University.
+        Along this we also provide the notes of different subject.
       </div>
       <div class="col-md-2 mb-3" id="footer-useful-link">
         <h4>USEFUL LINKS</h4>
@@ -388,6 +299,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+  <script src="scipts/index.js"></script>
 </body>
 
 </html>
